Changed to don't use com/amazonaws/util/IOUtils